--- a/code/dev/parts/dashboard/widgets/top-reports/view-top-10-countries.tpl.html
+++ b/code/dev/parts/dashboard/widgets/top-reports/view-top-10-countries.tpl.html
@@ -1,6 +1,9 @@
 <div class="col-md-12 top-reports-countries">
   <!-- <h3>Top 10 Countries</h3> -->
-  <div class="alert alert-info" ng-if="!country || !country.length">
+  <div class="alert alert-info" ng-if="!config.domain">
+    Please click on <i class="glyphicon glyphicon-cog"></i> icon to configure the widget
+  </div>
+  <div ng-if="config.domain" class="alert alert-info" ng-if="!country || !country.length">
     No data to display
   </div>
   <div class="auto-scroll" ng-if="country && country.length" ng-hide="!country || !country.length">
