--- a/code/parts/import-config/import-config.html
+++ b/code/parts/import-config/import-config.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-sm-12">
       <h2 class="pull-left page-title">
-        Import CDN Configuration
+        Upload Existing CDN Configuration
       </h2>
     </div>
   </div>
@@ -38,7 +38,7 @@
             </div>
             <hr>
             <div class="pull-left">
-              <h5>Select Domain To Apply The Imported Configuration</h5>
+              <h5>Select Domain:</h5>
               <div domain-select ng-model="domain" on-select="onDomainSelected()"></div>
             </div>
             <br>
@@ -46,13 +46,13 @@
             <br>
             <div>
               <br>
-              <h5>Enter free text comment</h5>
+              <h5>Optional Comment:</h5>
               <input type="text" ng-model="config.comment" placeholder="Comment" class="form-control">
             </div>
             <hr>
             <div class="form-group">
               <div class="col-md-12">
-                <h4>CDN/VCL Configuration</h4>
+                <h4>Copy/paste Here The CDN/VCL Configuration To Upload:</h4>
                 <textarea ng-model="config.text" id="" style="width: 100%; height: 250px" autofocus></textarea>
 
                 <div style="margin-top: 15px">
@@ -66,7 +66,7 @@
                           ng-click="import()">
                     <i class="glyphicon glyphicon-refresh spin" ng-if="_loading"></i>
                     <i class="fa fa-save" ng-if="!_loading"></i>&nbsp;
-                    Import
+                    Upload
                   </button>
                 </div>
               </div>
@@ -84,7 +84,7 @@
     <h3 class="modal-title">Confirm</h3>
   </div>
   <div class="modal-body">
-    Please confirm that you want to import the provided configuration
+    Please confirm that you want to upload the provided configuration
     <span ng-if="model.domain_name"> for domain <strong>{{model.domain_name}}</strong></span>
   </div>
   <div class="modal-footer">
