--- a/code/parts/layout.html
+++ b/code/parts/layout.html
@@ -74,7 +74,7 @@
                 </a>
                 <a ui-sref-active="active" ui-sref="index.webApp.importConfig" class="side-menu-sub-item" ng-if="userService.isReseller() || userService.isRevadmin()">
                     <i class="sub-menu-icon fa fa-arrow-right"></i>
-                    Import Config
+                    Upload Config
                 </a>
                 <!--<a ui-sref="index.webApp.domainConfig" class="side-menu-item">-->
                 <!--<i class="glyphicon glyphicon-wrench"></i>-->
