--- a/code/dev/parts/domains/edit.html
+++ b/code/dev/parts/domains/edit.html
@@ -23,7 +23,7 @@
         </div>
       </div>
       <div class="panel-body">
-        <form class="form-horizontal">
+        <form class="form-horizontal"  novalidate>
           <div class="form-group">
             <label for="domain_name" class="col-sm-3 control-label" popover-trigger="mouseenter">Domain Name</label>
             <div class="col-sm-9">
