--- a/code/dev/parts/domains/edit.html
+++ b/code/dev/parts/domains/edit.html
@@ -183,10 +183,10 @@
             <div class="panel-heading">
               <span class="pull-left panel-buttons-left">
                 <a ng-show="!isCollapsedAll" class="btn btn-default btn-md " ng-click="onCollapsAllCachingRule()" title="Collapse All Rules" ng-show="!isCollapsedAll">
-                  <i class="glyphicon glyphicon-collapse-up "></i>
+                  <i class="glyphicon glyphicon-chevron-up "></i>
                 </a>
                 <a  ng-show="isCollapsedAll" class="btn btn-default btn-md " ng-click="onExpandAllCachingRule()" title="Expand All Rules">
-                  <i class="glyphicon glyphicon-collapse-down"></i>
+                  <i class="glyphicon glyphicon-chevron-down"></i>
                 </a>
               </span>
               <span ng-click="onAddNewCachingRule()" class="btn btn-primary btn-sm pull-right" title="Add New Caching Rule"><i class="glyphicon glyphicon-plus"></i></span>
